SERVER-45906 Ensure initial stable checkpoint is triggered properly when enableMajorityReadConcern=false

(cherry picked from commit d9bd7a1be843ddb38473506ea2aa4802be6d9993)

 create mode 100644 jstests/replsets/trigger_initial_stable_checkpoint.js